oneplus: Build dead houston
Change-Id: I59db8056fe029ae0e0842cc30d3bd39d693dcb0e

--- a/drivers/oneplus/Kconfig
+++ b/drivers/oneplus/Kconfig
@@ -5,3 +5,4 @@ source "drivers/oneplus/power/Kconfig"
 source "drivers/oneplus/project-info/Kconfig"
 source "drivers/oneplus/vibrator/Kconfig"
 source "drivers/oneplus/vl53L1/Kconfig"
+source "drivers/oneplus/houston/Kconfig"
